[package]
name = "spnr-lib"
version = "0.3.0"
edition = "2021"
authors = [ "spnr@spnr.app" ]
description = "Rust library for building smart contracts on the Internet Computer, by the Spinner.Cash team."
license = "GPL-3.0"
homepage = "https://github.com/spinner-cash/lib-rs"
documentation = "https://docs.rs/spnr-lib"
readme = "README.md"
categories = ["data-structures", "no-std"]
keywords = ["internet-computer", "types", "canister", "spnr", "spinner"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_matches = "1.3"
proptest = "1.0"
